@startuml
hide empty methods
entity Cordel{
  título
  subtítulo
  destaque : bool
  publicado : bool
  data de publicação
  data de cadastro
  capa : imagem
}
entity Página{
  numero : inteiro
  estrofes : texto
}
entity Curso{
  nome
}
entity Autor{
  nome
  pseudônimo
  curso
  contato
  descricao
}
entity Categoria{
  nome
}
entity Novidades {
  titulo
  texto
  imagem
  data
}
Cordel "1" *-- "1..*" Página
Cordel "*" -- "1..*" Autor
Cordel "*" -- "*" Categoria
Autor "*" -- "*" Curso
' visite plantuml.com para gerar o diagrama
@enduml
